# sellio

./: .gitignore  README.md  alembic.ini  docker-compose.yml  lets.yaml  order-graphql-examples.md  pyproject.toml  ruff.toml  sellio-cart.md
alembic/: env.py
alembic/versions/: 45a928d57037_add_product_discount_and_product_group_.py  4feef4c7061e_implement_auth_sessions.py  5cde7abed854_create_payment_option_table.py  7565a4f1bfb5_implement_deliveryinfo.py  812cc6120ddf_add_product_table.py  885fdd5122ae_create_user_and_company_tables.py  97b4d294a686_add_category_alias_field.py  9f456b18fafb_create_category_table.py  ac34d2a8a33b_create_user_table.py  d0244f79efd4_add_status_and_timestamp_for_order.py  e348340727b4_remove_unneccessary_field.py  e9152832dec3_create_delivery_option_table.py  f687340c28fa_create_order_table.py
config/: dev.toml
docker/: Dockerfile
docker/nginx/: nginx-dev.conf  nginx.conf
scripts/: categories-mocks-new.json  categories-mocks.json  companies-mocks.json  deliveries-mocks.json  fill_db_with_mock_info.py  payments-mocks.json  products-mocks-new.json  products-mocks.json  users-mocks.json
sellio/: __init__.py  main.py  settings.py  url.py  utils.py
sellio/api/: __init__.py
sellio/db_graph/: __init__.py  context.py  graph.py
sellio/graph/: __init__.py  context.py  endpoint.py  enums.py  schema.py  utils.py
sellio/lib/: enum.py  product.py  slugify.py
sellio/middleware/: request_context.py
sellio/models/: __init__.py  auth_session.py  category.py  company.py  delivery_info.py  delivery_option.py  order.py  payment_option.py  (+4 more)
(+60 files in other folders)
