[project]
name = "sellio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "fastapi[standard]==0.115.11",
    "graphql-core-next==1.1.1",
    "hiku==0.8.0rc8",
    "prometheus-client==0.21.1",
    "pydantic-settings>=2.8.1",
    "ruff==0.11.1",
]
